<resources>
    <string name="app_name">BeiDou</string>
    <string name="app_name_CN">北斗那些事</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎进入</string>
    <string name="Copyright">Copyright©ZZXZ.Group,2017</string>
    <string name="about">简介</string>
    <string name="application">应用</string>
    <string name="news">新闻</string>
    <string name="intro2terms">科普</string>
    <string name="about_app_title">关于开发者</string>
    <string name="about_app_developer">指导老师：LJ\n开发小组：\nZJY，ZBF，XGQ，ZH\nCopyRight © 2017 ZZXZ.Group \n保留所有权利\n说明：由于电子版作品中不能含有作者姓名及其他信息，因此仅用缩写代替</string>
    <string name="about_app_button">确定</string>
    <string name="abt1">（一）概述</string>
    <string name="abt2">（二）发展历程</string>
    <string name="abt3">（三）建设原则</string>
    <string name="abt4">（四）发展计划</string>
    <string name="abt5">（五）服务</string>
    <string name="about1">&#160;&#160;北斗卫星导航系统﹝BeiDou Navigation Satellite System，英文缩写BDS﹞是中国正在实施的自主发展、独立运行的全球卫星导航系统。系统建设目标是：建成独立自主、开放兼容、技术先进、稳定可靠的覆盖全球的北斗卫星导航系统，促进卫星导航产业链形成，形成完善的国家卫星导航应用产业支撑、推广和保障体系，推动卫星导航在国民经济社会各行业的广泛应用。北斗卫星导航系统由空间段、地面段和用户段三部分组成，空间段包括5颗静止轨道卫星和30颗非静止轨道卫星，地面段包括主控站、注入站和监测站等若干个地面站，用户段包括北斗用户终端以及与其他卫星导航系统兼容的终端。</string>
    <string name="about2">&#160;&#160;卫星导航系统是重要的空间信息基础设施。中国高度重视卫星导航系统的建设，一直在努力探索和发展拥有自主知识产权的卫星导航系统。2000年，首先建成北斗导航试验系统，使我国成为继美、俄之后的世界上第三个拥有自主卫星导航系统的国家。该系统已成功应用于测绘、电信、水利、渔业、交通运输、森林防火、减灾救灾和公共安全等诸多领域，产生显著的经济效益和社会效益。特别是在2008年北京奥运会、汶川抗震救灾中发挥了重要作用。为更好地服务于国家建设与发展，满足全球应用需求，我国启动实施了北斗卫星导航系统建设。</string>
    <string name="about3">&#160;&#160;北斗卫星导航系统的建设与发展，以应用推广和产业发展为根本目标，不仅要建成系统，更要用好系统，强调质量、安全、应用、效益，遵循以下建设原则：1、开放性。北斗卫星导航系统的建设、发展和应用将对全世界开放，为全球用户提供高质量的免费服务，积极与世界各国开展广泛而深入的交流与合作，促进各卫星导航系统间的兼容与互操作，推动卫星导航技术与产业的发展。2、自主性。中国将自主建设和运行北斗卫星导航系统，北斗卫星导航系统可独立为全球用户提供服务。3、兼容性。在全球卫星导航系统国际委员会（ICG）和国际电联（ITU）框架下，使北斗卫星导航系统与世界各卫星导航系统实现兼容与互操作，使所有用户都能享受到卫星导航发展的成果。4、渐进性。中国将积极稳妥地推进北斗卫星导航系统的建设与发展，不断完善服务质量，并实现各阶段的无缝衔接。</string>
    <string name="about4">&#160;&#160;目前，我国正在实施北斗卫星导航系统建设。根据系统建设总体规划，2012年左右，系统将首先具备覆盖亚太地区的定位、导航和授时以及短报文通信服务能力；2020年左右，建成覆盖全球的北斗卫星导航系统。</string>
    <string name="about5">&#160;&#160;北斗卫星导航系统致力于向全球用户提供高质量的定位、导航和授时服务，包括开放服务和授权服务两种方式。开放服务是向全球免费提供定位、测速和授时服务，定位精度10米，测速精度0.2米/秒，授时精度10纳秒。授权服务是为有高精度、高可靠卫星导航需求的用户，提供定位、测速、授时和通信服务以及系统完好性信息。为使北斗卫星导航系统更好地为全球服务，加强北斗卫星导航系统与其它卫星导航系统之间的兼容与互操作，促进卫星定位、导航、授时服务的全面应用，中国愿意与其它国家合作，共同发展卫星导航事业。</string>
</resources>
