<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context="com.zjyzbfxgqzh.beidou.About_PlaceholderFragment"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/bimg"
                android:id="@+id/imageView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:text="@string/abt1"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView1" />

            <TextView
                android:text="@string/about1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <TextView
                android:textSize="18sp"
                android:text="@string/abt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <TextView
                android:text="@string/about2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <TextView
                android:textSize="18sp"
                android:text="@string/abt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />
            <TextView
                android:text="@string/about3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <TextView
                android:textSize="18sp"
                android:text="@string/abt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" />

            <TextView
                android:text="@string/about3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" />

            <TextView
                android:textSize="18sp"
                android:text="@string/abt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9" />

            <TextView
                android:text="@string/about5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>