<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:id="@+id/welcome_img"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ImageView>

    <ImageView
        android:id="@+id/welcome_icon"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="30dp"
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ImageView>

    <TextView
        android:text="@string/app_name_CN"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="16pt"
        android:paddingBottom="70dp"
        android:paddingTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </TextView>

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="11pt"
        android:textColor="@color/welcome"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:text="@string/Copyright"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</FrameLayout>